[BACKPORT] Cleanup ui::PlatformWindowDelegate interface.

Some cleanups for the ui::PlatformWindowDelegate interface
1. Removed device_pixel_ratio parameter from
   OnAcceleratedWidgetAvailable. It wasn't used anywhere and the passed
   value was incorrect for most PlatformWindow implementations.
2. Removed OnAcceleratedWidgetDestroying() - it wasn't used anywhere.
3. Clarified OnAcceleratedWidgetDestroyed() should not to be called
   from destructor. It's only useful on Android. Wayland and scenic
   implementations were calling it incorrectly in destructor. This also
   fixes the crash in the attached bug.

TBR=piman@chromium.org (trivial change in //gpu)

Bug: 866729
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I164888802c65295bd07d9aa8d882332bbacbdbd9
Reviewed-on: https://chromium-review.googlesource.com/1147754
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578888}