src/ui/aura/mus/window_tree_host_mus.cc
@@ -71,8 +71,7 @@ WindowTreeHostMus::WindowTreeHostMus(WindowTreeHostMusInitParams init_params)
   accelerated_widget =
       static_cast<gfx::AcceleratedWidget>(accelerated_widget_count++);
 #endif
-  OnAcceleratedWidgetAvailable(accelerated_widget,
-                               GetDisplay().device_scale_factor());
+  OnAcceleratedWidgetAvailable(accelerated_widget);
 
   delegate_->OnWindowTreeHostCreated(this);
 
@@ -180,7 +179,7 @@ void WindowTreeHostMus::OverrideAcceleratedWidget(
   if (was_visible)
     compositor()->SetVisible(false);
   compositor()->ReleaseAcceleratedWidget();
-  OnAcceleratedWidgetAvailable(widget, GetDisplay().device_scale_factor());
+  OnAcceleratedWidgetAvailable(widget);
   if (was_visible)
     compositor()->SetVisible(true);
 
